<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:contentDescription="@string/second_image"
            android:padding="4dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/second_image"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:textColor="@color/darkgold3"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/darkgold"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginHorizontal="16dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                />

            <Button
                android:id="@+id/btnHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:layout_marginHorizontal="16dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                 />

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_message"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                />
            <Button
                android:id="@+id/btnWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website_message"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                />
            <ImageView
                android:id="@+id/bottomView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/third_image"
                app:srcCompat="@drawable/third_image"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                />
    </LinearLayout>
</ScrollView>


