<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/library"
        android:padding="4dp"
        android:layout_marginBottom="10dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds = "true"
        app:srcCompat="@drawable/library"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterHere"
        android:textSize="24sp"
        android:textColor="@color/darkRoyalBlue"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:hint="@string/username"
        android:inputType= "textEmailAddress"
        android:textColor="@color/darkRoyalBlue"
        android:layout_margin="10dp"
        android:minHeight="48dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassword"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColor="@color/darkRoyalBlue"
        android:layout_margin="10dp"
        android:minHeight="48dp"
        />

    <Button
        android:id="@+id/btnForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:backgroundTint="@color/white"
        android:textColor="@color/darkgold"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:textSize="24sp"
        />
</androidx.appcompat.widget.LinearLayoutCompat>